--- a/minil.toml
+++ b/minil.toml
@@ -1,2 +1,8 @@
 name = "API-BigBlueButton"
+authority = "cpan:BCDE"
+abstract="client for BigBlueButton API"
+readme_from="lib/API/BigBlueButton.pm"
+license="gpl_1"
 # badges = ["travis"]
+[release]
+do_not_upload_to_cpan=true
